Added beta message

--- a/web/tmpl/LoadAnnotation.tmpl
+++ b/web/tmpl/LoadAnnotation.tmpl
@@ -343,7 +343,12 @@ function more() {
 
 <br>
 <span onClick="load_annotation();" style="font-size:1em;" class='ui-button ui-corner-all ui-button-go'>Load Annotation</span>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<TMPL_INCLUDE NAME='widgets/Beta.tmpl'>
 
 
 <div id="file_select_dialog" class="dialog_box" title="Select Data File ..." style="display:none;">
