--- a/web/tmpl/LoadExperiment.tmpl
+++ b/web/tmpl/LoadExperiment.tmpl
@@ -329,7 +329,12 @@ function get_sources () {
 
 <br>
 <span onClick="load_experiment();" style="font-size:1em;" class='ui-button ui-corner-all ui-button-go'>Load Experiment</span>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<TMPL_INCLUDE NAME='widgets/Beta.tmpl'>
 
 
 <div id="file_select_dialog" class="dialog_box" title="Select Data File ..." style="display:none;">
