Moved some common js code into new module

--- a/web/tmpl/LoadExperiment.tmpl
+++ b/web/tmpl/LoadExperiment.tmpl
@@ -1,5 +1,6 @@
 <TMPL_IF NAME='MAIN'>
 <SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.fileupload.js"></SCRIPT>
+<SCRIPT language="JavaScript" type="text/javascript" src="./js/coge.ui.utils.js"></SCRIPT>
 
 <SCRIPT language="JavaScript">
 $(document).ready(function(){
@@ -32,32 +33,6 @@ $(document).ready(function(){
 		}
 	});
 });
-
-function set_input(id, text) {
-	var obj = $('#'+id);
-	var val = obj.val();
-	if (!text) {
-		text = 'Search';
-	}	
-	
-	if ( val && val != text ) {
-		obj.css({"font-style": "normal", "color": "black"});
-	}
-	else {
-		if (obj.is(":focus")) {
-			obj.val('');
-			obj.css({"font-style": "normal", "color": "black"});
-		}
-		else {
-			obj.val(text);
-			obj.css({"font-style": "italic", "color": "gray"});
-		}
-	}
-
-	// Init event handlers
-	$('#'+id).unbind('blur').bind('blur', function() { set_input(id, text); })
-			 .unbind('focus').bind('focus', function() { set_input(id, text); });
-}
 
 function file_selected(filename, url) {
 	$('#file_select_dialog').dialog('close');
