--- a/web/tmpl/LoadGenome.tmpl
+++ b/web/tmpl/LoadGenome.tmpl
@@ -1,6 +1,7 @@
 <TMPL_IF NAME='MAIN'>
 <SCRIPT type="text/javascript" src="./js/jquery.fileupload.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="./js/jstree/jquery.jstree.js"></SCRIPT>
+<SCRIPT language="JavaScript" type="text/javascript" src="./js/coge.ui.utils.js"></SCRIPT>
 
 <style type="text/css"> 
 .jstree li a ins { display:none !important; }
@@ -53,33 +54,6 @@ $(document).ready(function(){
 		//.jstree({ plugins: ["themes"] })
 		//.jstree("set_theme", "classic");
 });
-
-function set_input(id, text) {
-	var obj = $('#'+id);
-	var val = obj.val();
-	if (!text) {
-		text = 'Search';
-	}	
-	
-	if ( val && val != text ) {
-		obj.css({"font-style": "normal", "color": "black"});
-	}
-	else {
-		if (obj.is(":focus")) {
-			obj.val('');
-			obj.css({"font-style": "normal", "color": "black"});
-		}
-		else {
-			obj.val(text);
-			obj.css({"font-style": "italic", "color": "gray"});
-		}
-	}
-
-	// Init event handlers
-	$('#'+id).unbind('blur').bind('blur', function() { set_input(id, text); })
-			 .unbind('focus').bind('focus', function() { set_input(id, text); })
-			 .unbind('click').bind('click', function() { set_input(id, text); });
-}
 
 function file_selected(filename, url) {
 	$('#file_select_dialog').dialog('close');
