Beautified the maintenance message

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -114,7 +114,7 @@ $(document).ready( function() {
 });
 
 </SCRIPT>
-<div id="main_alert" style="width:90%;color: red; font-size: 1em; text-align: center"></div>
+<!--<div id="main_alert" style="color:white;background-color:lightcoral;border:1px solid lightgray;padding:5px;margin-bottom:15px;font-size: 1em; text-align: center">Note: login is broken, we are working on it!</div>-->
 <div id="signin_popup" class="image_window" style="display:none"></div>
 
 <TMPL_UNLESS NAME="MENU">
