Show sequence in addition to gff

--- a/web/tmpl/GenomeInfo.tmpl
+++ b/web/tmpl/GenomeInfo.tmpl
@@ -229,7 +229,7 @@ function export_bed (gid) {
 </table>
 <br>
 
-<span style="color:dimgray;font-weight:bold;">Annotation</span><br>
+<span style="color:dimgray;font-weight:bold;">Sequence & Annotation</span><br>
 <TMPL_IF NAME='ANNOTATION'>
 	<table class="small ui-widget-content ui-corner-all" style="color:gray;">
 		<tr>
