--- a/web/tmpl/GenomeInfo.tmpl
+++ b/web/tmpl/GenomeInfo.tmpl
@@ -221,7 +221,7 @@ function export_bed (gid) {
 			<span class='ui-button ui-corner-all' onClick="edit_genome_info();">Edit Info</span>
 		</td>
 		<td style="padding-left:10px;">
-			<span id='genome_data' style="color:dimgray;font-weight:bold;">Genome Data</span>
+			<span id='genome_data' style="color:dimgray;font-weight:bold;"><!--Genome Data-->&nbsp;</span>
 			<div class="small ui-widget-content ui-corner-all"><TMPL_VAR NAME="GENOME_DATA"></div>
 			<span class='ui-button ui-corner-all ui-button-icon-right' onclick="window.open('GenomeView.pl?dsgid=<TMPL_VAR NAME=GID>')"><span class="ui-icon ui-icon-extlink"></span>Genome View</span>
 		</td>
