--- a/web/tmpl/widgets/FileSelect.tmpl
+++ b/web/tmpl/widgets/FileSelect.tmpl
@@ -189,6 +189,7 @@ function irods_get_path (path) {
 					+ 'The following error occurred while accessing the Data Store.<br><br>'
 					+ result.error + '<br><br>'
 					+ 'We apologize for the inconvenience.  Our support staff have already been notified and will resolve the issue ASAP. '
+					+ 'If you just logged into CoGe for the first time, give the system a few minutes to setup your Data Store connection and try again.  '
 					+ 'Please contact <a href="mailto:<TMPL_VAR NAME=SUPPORT_EMAIL>"><TMPL_VAR NAME=SUPPORT_EMAIL></a> with any questions or comments.'
 					+'</span></td></tr>');
 				return;
