updated text in Genome List

--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -599,7 +599,7 @@ function export_bed () {
               </select>
  <br>
     <span class="ui-button ui-corner-all" id=send onClick="$('#genomelist_choice').sortSelect()">Sort List Alphabetically</span><br><br>
-    <span class="ui-button ui-corner-all" id=send onClick="send_to_GenoList()">Create Genome List</span><br><br>
+    <span class="ui-button ui-corner-all" id=send onClick="send_to_GenoList()">Send to GenomeList</span><br><br>
       <span class="ui-button ui-corner-all" id=remove onClick="remove_selected_genomes();">Remove</span><br><br>
     <span class="ui-button ui-corner-all" id=clear onClick="clear_genome_list()">Clear</span><br>
 
