changed list text from 'New List' to 'Create Notebook'

--- a/web/tmpl/GenomeList.tmpl
+++ b/web/tmpl/GenomeList.tmpl
@@ -627,7 +627,7 @@ function edit_list_info (lid) {
 	   <option value="send_to_blast">CoGeBlast</option>
 	   <option value="send_to_SynFind">SynFind</option>
 	   <option value="send_to_GenomeList">GenomeList</option>
-	   <option value="send_to_list">New List</option>
+	   <option value="send_to_list">Create Notebook</option>
 	  </select>
 	<span class='ui-button ui-corner-all ui-button-icon-right  ui-button-go' onclick="feature_checkboxes();"><span class="ui-icon ui-icon-extlink"></span>Go</span><span id=retrieve_message class=alert></span>  
 	 </div>
