Fix border around "Experiment Annotations"

--- a/web/tmpl/ExperimentView.tmpl
+++ b/web/tmpl/ExperimentView.tmpl
@@ -273,7 +273,7 @@ function image_preview(obj, preview) {
 </SCRIPT>
 
 <div>
- <span style="color:dimgray;font-weight:bold;">Experiment Info</span><br>
+ <div style="color:dimgray;font-weight:bold;">Experiment Info</div>
  <div id='experiment_info'>
   <TMPL_VAR NAME="EXPERIMENT_INFO">
  </div>
@@ -283,7 +283,7 @@ function image_preview(obj, preview) {
 
 <TMPL_IF NAME="EXPERIMENT_ANNOTATIONS">
 <div>
- <span style="color:dimgray;font-weight:bold;">Experiment Annotations</span><br>
+ <div style="color:dimgray;font-weight:bold;">Experiment Annotations</div>
  <div id="experiment_annotations">
   <TMPL_VAR NAME="EXPERIMENT_ANNOTATIONS">
  </div>
