--- a/web/css/styled.css
+++ b/web/css/styled.css
@@ -135,10 +135,11 @@ div.panel {
   background-color:mistyrose;
 }
 
-.container{
+/* mdb removed 4/30/13 - conflict with jbrowse, doesn't appear to be used anyway */
+/* .container{
   border: 1px solid red;
   overflow: auto;
-}
+} */
 
 .inner{
   overflow:auto;
