--- a/web/tmpl/User.tmpl
+++ b/web/tmpl/User.tmpl
@@ -1,13 +1,11 @@
 <TMPL_IF NAME="MAIN">
-<SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.tablesorter.2.0.3.js"></SCRIPT>
-<SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.tablesorter.pager.js"></SCRIPT>
-<SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.fileupload.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="./js/jquery.fileupload.js"></SCRIPT>
 
 <style>
 div.deleted { display: none; }
 </style>
 
-<SCRIPT language="JavaScript">
+<SCRIPT type="text/javascript">
 var POLL_TIME = 30*1000; // polling rate when user is not idle
 var IDLE_TIME = 30*1000; // stop polling after this lapse, then poll on next mousemove
 
