--- a/web/tmpl/GenomeInfo.tmpl
+++ b/web/tmpl/GenomeInfo.tmpl
@@ -223,7 +223,7 @@ function export_bed (gid) {
 		<td style="padding-left:10px;">
 			<span id='genome_data' style="color:dimgray;font-weight:bold;"><!--Genome Data-->&nbsp;</span>
 			<div class="small ui-widget-content ui-corner-all"><TMPL_VAR NAME="GENOME_DATA"></div>
-			<span class='ui-button ui-corner-all ui-button-icon-right' onclick="window.open('GenomeView.pl?dsgid=<TMPL_VAR NAME=GID>')"><span class="ui-icon ui-icon-extlink"></span>Genome View</span>
+			<span class='ui-button ui-corner-all ui-button-icon-right' onclick="window.open('GenomeView.pl?gid=<TMPL_VAR NAME=GID>')"><span class="ui-icon ui-icon-extlink"></span>Genome View</span>
 		</td>
 	</tr>
 </table>
