updated link to GenomeView to gid= instead of dsgid=

--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -292,7 +292,7 @@ function launch_viewer (dsgid, chr) {
  x = $('#x').val();
  z = $('#z').val();
  if (z > 12) {z=12;}
- link =  "GenomeView.pl?z="+z+"&x="+x+"&dsgid="+dsgid+"&chr="+chr;
+ link =  "GenomeView.pl?z="+z+"&x="+x+"&gid="+dsgid+"&chr="+chr;
  window.open(link);
 }
 function timing(val){
