Added "add all" and "clear all" buttons

--- a/web/js/jbrowse/plugins/CoGe/css/tracklist.css
+++ b/web/js/jbrowse/plugins/CoGe/css/tracklist.css
@@ -11,5 +11,17 @@ div.tracklist-container.collapsed {
 	display: none;
 }
 
+/* .cogeIconPlus {
+    background-image: url('js/jbrowse/plugins/CoGe/img/plus.png');
+    width: 16px;
+    height: 16px;
+}
+
+.cogeIconTest {
+    background-image: url('img/spinner.gif');
+    width: 16px;
+    height: 16px;
+} */
+
 
 
