--- a/web/js/jbrowse/plugins/CoGe/css/tracklist.css
+++ b/web/js/jbrowse/plugins/CoGe/css/tracklist.css
@@ -23,6 +23,115 @@ div.tracklist-container.collapsed {
     height: 16px;
 } */
 
-div.notebook-indent {
-	padding-left: 25px;
+.feature,
+.plus-feature,
+.minus-feature {
+    position:absolute;
+    height: 7px;
+    background-repeat: repeat-x;
+    cursor: pointer;
+    min-width: 1px;
+    z-index: 10;
+
+    background: -moz-linear-gradient(top,  rgba(191,137,28,0) 2%, rgba(191,137,28,1) 6%, rgba(191,137,28,1) 16%, rgba(214,161,64,1) 50%, rgba(191,137,28,1) 84%, rgba(191,137,28,1) 94%, rgba(191,137,28,0) 98%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,rgba(191,137,28,0)), color-stop(6%,rgba(191,137,28,1)), color-stop(16%,rgba(191,137,28,1)), color-stop(50%,rgba(214,161,64,1)), color-stop(84%,rgba(191,137,28,1)), color-stop(94%,rgba(191,137,28,1)), color-stop(98%,rgba(191,137,28,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(191,137,28,0) 2%,rgba(191,137,28,1) 6%,rgba(191,137,28,1) 16%,rgba(214,161,64,1) 50%,rgba(191,137,28,1) 84%,rgba(191,137,28,1) 94%,rgba(191,137,28,0) 98%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(191,137,28,0) 2%,rgba(191,137,28,1) 6%,rgba(191,137,28,1) 16%,rgba(214,161,64,1) 50%,rgba(191,137,28,1) 84%,rgba(191,137,28,1) 94%,rgba(191,137,28,0) 98%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(191,137,28,0) 2%,rgba(191,137,28,1) 6%,rgba(191,137,28,1) 16%,rgba(214,161,64,1) 50%,rgba(191,137,28,1) 84%,rgba(191,137,28,1) 94%,rgba(191,137,28,0) 98%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(191,137,28,0) 2%,rgba(191,137,28,1) 6%,rgba(191,137,28,1) 16%,rgba(214,161,64,1) 50%,rgba(191,137,28,1) 84%,rgba(191,137,28,1) 94%,rgba(191,137,28,0) 98%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00bf891c', endColorstr='#00bf891c',GradientType=0 ); /* IE6-9 */
+
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+}
+
+.plus-gene,
+.minus-gene {
+    position: absolute;
+    height: 35px;
+
+    background: -moz-linear-gradient(top,  rgba(153,153,153,0) 2%, rgba(153,153,153,1) 6%, rgba(153,153,153,1) 16%, rgba(191,191,191,1) 50%, rgba(153,153,153,1) 84%, rgba(153,153,153,1) 94%, rgba(153,153,153,0) 98%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,rgba(153,153,153,0)), color-stop(6%,rgba(153,153,153,1)), color-stop(16%,rgba(153,153,153,1)), color-stop(50%,rgba(191,191,191,1)), color-stop(84%,rgba(153,153,153,1)), color-stop(94%,rgba(153,153,153,1)), color-stop(98%,rgba(153,153,153,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(153,153,153,0) 2%,rgba(153,153,153,1) 6%,rgba(153,153,153,1) 16%,rgba(191,191,191,1) 50%,rgba(153,153,153,1) 84%,rgba(153,153,153,1) 94%,rgba(153,153,153,0) 98%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(153,153,153,0) 2%,rgba(153,153,153,1) 6%,rgba(153,153,153,1) 16%,rgba(191,191,191,1) 50%,rgba(153,153,153,1) 84%,rgba(153,153,153,1) 94%,rgba(153,153,153,0) 98%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(153,153,153,0) 2%,rgba(153,153,153,1) 6%,rgba(153,153,153,1) 16%,rgba(191,191,191,1) 50%,rgba(153,153,153,1) 84%,rgba(153,153,153,1) 94%,rgba(153,153,153,0) 98%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(153,153,153,0) 2%,rgba(153,153,153,1) 6%,rgba(153,153,153,1) 16%,rgba(191,191,191,1) 50%,rgba(153,153,153,1) 84%,rgba(153,153,153,1) 94%,rgba(153,153,153,0) 98%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00999999', endColorstr='#00999999',GradientType=0 ); /* IE6-9 */
+
+    z-index: 8;
+    min-width: 1px;
+    cursor: pointer;
+}
+
+.plus-mRNA,
+.minus-mRNA {
+    position: absolute;
+    top: 5px;
+    height: 41px;
+
+    background: -moz-linear-gradient(top,  rgba(30,87,153,0) 2%, rgba(30,87,153,1) 8%, rgba(30,87,153,1) 16%, rgba(41,137,216,1) 50%, rgba(30,87,153,1) 84%, rgba(30,87,153,1) 92%, rgba(30,87,153,0) 98%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,rgba(30,87,153,0)), color-stop(8%,rgba(30,87,153,1)), color-stop(16%,rgba(30,87,153,1)), color-stop(50%,rgba(41,137,216,1)), color-stop(84%,rgba(30,87,153,1)), color-stop(92%,rgba(30,87,153,1)), color-stop(98%,rgba(30,87,153,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(30,87,153,0) 2%,rgba(30,87,153,1) 8%,rgba(30,87,153,1) 16%,rgba(41,137,216,1) 50%,rgba(30,87,153,1) 84%,rgba(30,87,153,1) 92%,rgba(30,87,153,0) 98%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(30,87,153,0) 2%,rgba(30,87,153,1) 8%,rgba(30,87,153,1) 16%,rgba(41,137,216,1) 50%,rgba(30,87,153,1) 84%,rgba(30,87,153,1) 92%,rgba(30,87,153,0) 98%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(30,87,153,0) 2%,rgba(30,87,153,1) 8%,rgba(30,87,153,1) 16%,rgba(41,137,216,1) 50%,rgba(30,87,153,1) 84%,rgba(30,87,153,1) 92%,rgba(30,87,153,0) 98%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(30,87,153,0) 2%,rgba(30,87,153,1) 8%,rgba(30,87,153,1) 16%,rgba(41,137,216,1) 50%,rgba(30,87,153,1) 84%,rgba(30,87,153,1) 92%,rgba(30,87,153,0) 98%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#001e5799',GradientType=0 ); /* IE6-9 */
+
+    z-index: 9;
+    min-width: 1px;
+    cursor: pointer;
+}
+
+.plus-cds,
+.minus-cds {
+    position: absolute;
+    height: 51px;
+
+    background: -moz-linear-gradient(top,  rgba(30,153,87,0) 2%, rgba(30,153,87,1) 8%, rgba(30,153,87,1) 16%, rgba(41,216,137,1) 50%, rgba(30,153,87,1) 84%, rgba(30,153,87,1) 92%, rgba(30,153,87,0) 98%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,rgba(30,153,87,0)), color-stop(8%,rgba(30,153,87,1)), color-stop(16%,rgba(30,153,87,1)), color-stop(50%,rgba(41,216,137,1)), color-stop(84%,rgba(30,153,87,1)), color-stop(92%,rgba(30,153,87,1)), color-stop(98%,rgba(30,153,87,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(30,153,87,0) 2%,rgba(30,153,87,1) 8%,rgba(30,153,87,1) 16%,rgba(41,216,137,1) 50%,rgba(30,153,87,1) 84%,rgba(30,153,87,1) 92%,rgba(30,153,87,0) 98%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(30,153,87,0) 2%,rgba(30,153,87,1) 8%,rgba(30,153,87,1) 16%,rgba(41,216,137,1) 50%,rgba(30,153,87,1) 84%,rgba(30,153,87,1) 92%,rgba(30,153,87,0) 98%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(30,153,87,0) 2%,rgba(30,153,87,1) 8%,rgba(30,153,87,1) 16%,rgba(41,216,137,1) 50%,rgba(30,153,87,1) 84%,rgba(30,153,87,1) 92%,rgba(30,153,87,0) 98%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(30,153,87,0) 2%,rgba(30,153,87,1) 8%,rgba(30,153,87,1) 16%,rgba(41,216,137,1) 50%,rgba(30,153,87,1) 84%,rgba(30,153,87,1) 92%,rgba(30,153,87,0) 98%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e9957', endColorstr='#001e9957',GradientType=0 ); /* IE6-9 */
+
+    cursor: pointer;
+    min-width: 1px;
+    z-index: 10;
+}
+
+.plus-transcript-CDS,
+.minus-transcript-CDS {
+    position: absolute;
+    height: 11px;
+    background: #F09A9A;
+    cursor: pointer;
+    z-index: 10;
+    min-width: 1px;
+}
+
+.plus-transcript-arrowhead,
+.plus-arrowhead {
+    position: absolute;
+    width: 20px;
+    height: 32px;
+    background-image: url('img/arrow-right.png');
+    background-repeat: no-repeat;
+    right: -19px !important;
+    top: 8px !important;
+    background-size: 80%;
+}
+
+.minus-transcript-arrowhead,
+.minus-arrowhead {
+    position: absolute;
+    width: 20px;
+    height: 32px;
+    background-image: url('img/arrow-left.png');
+    background-repeat: no-repeat;
+    left: -15px !important;
+    top: 8px !important;
+    background-size: 80%;
 }
