Re-add notebook indent

--- a/web/js/jbrowse/plugins/CoGe/css/tracklist.css
+++ b/web/js/jbrowse/plugins/CoGe/css/tracklist.css
@@ -23,6 +23,10 @@ div.tracklist-container.collapsed {
     height: 16px;
 } */
 
+div.notebook-indent {
+	padding-left: 25px;
+}
+
 .feature,
 .plus-feature,
 .minus-feature {
