Remove "done" button from Share Dialog, gets confused with "Add" button

--- a/web/tmpl/User.tmpl
+++ b/web/tmpl/User.tmpl
@@ -1056,8 +1056,8 @@ function toggle_star(img) {
 				</span>
 			</TMPL_IF>
 		</div>
-		<br>
-		<span href="javascript:void(0)" onClick="$('#share_dialog').dialog('close')" class='ui-button ui-corner-all'>Done</span>
+		<!--<br>
+		<span href="javascript:void(0)" onClick="$('#share_dialog').dialog('close')" class='ui-button ui-corner-all'>Done</span>-->
 	</div>
 </TMPL_IF>
 
