--- a/web/js/jbrowse/plugins/CoGe/css/cogefeatures.css
+++ b/web/js/jbrowse/plugins/CoGe/css/cogefeatures.css
@@ -102,7 +102,7 @@
     position: absolute;
     width: 20px;
     height: 32px;
-    background-image: url('img/arrow-right.png');
+    background-image: url('../img/arrow-right.png');
     background-repeat: no-repeat;
     right: -19px !important;
     top: 8px !important;
@@ -114,7 +114,7 @@
     position: absolute;
     width: 20px;
     height: 32px;
-    background-image: url('img/arrow-left.png');
+    background-image: url('../img/arrow-left.png');
     background-repeat: no-repeat;
     left: -15px !important;
     top: 8px !important;
