--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -1,35 +1,14 @@
 <HTML>
 <HEAD>
-<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Pragma" content="no-cache" />
 <TITLE>CoGe: <TMPL_VAR NAME="PAGE_TITLE"></TITLE>
 <meta name="description" content="The CoGe Comparative Genomics Platform.  A software suite of interlinked and interconnected web-based tools for easily visualizing, comparing, and understanding the evolution, struture and dynamics of genomes." />
 <meta name="keywords" content="Genetics, Genome, Genomics, Human Genome, Genome Project, Genomics, Homolog, Homologue, Homologous, Homology, Molecular Genetics, Genomes, bioinformatics, mirna, microrna, dna sequencing, computational biology, gene sequencing, shotgun sequencing, Genome Browser, Genetic Information, Biology Genetics, Genome Sequence, Genome Sequencing, Homologous Chromosomes, DNA Genetics, DNA, Genetics Research, Genome Research, Functional Genomics, Genetics Genes, Genetics Map, Genome Analysis, Comparative Genomics, Genome Biology, Genomics Genetics, Homologous Chromosome, Mouse Genome, Human Genome, Yeast Genome, Complete Genomics, Bioinformatics, Bioinformatics genomics, gene genome, homologs, structural genomics, genetic genome, yeast genetics, bioinformatics genome, genes, genome, syntenic, whole genome sequencing, comparative genome, genetic variations, genome sequences, genome genetics, homologous gene, snp genome" />
 <meta name="google-site-verification" content="Pp2O8PKsZWc6dO67lYe2ONCofCYgMwQcoy6bWhkvbXs" />
 <meta name="google-site-verification" content="voXZn_uzuPQj7YtCxw5ogRAW5PgalKg-8rA_VT7TooA" />
 <meta name="google-site-verification" content="LFIw-oo_UpW85cg_ONvoPuH1IpWYjlfmipsWhOvo1kk" />
-<TMPL_UNLESS NAME="NO_JQUERY">
-<link rel="stylesheet" type="text/css" href="css/superfish.css" />
 
-<!-- This is the implementation of jquery into the header of all CoGe pages -->
-<!-- <SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-1.3.2.min.js"></SCRIPT> -->
-<SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-1.8.0.min.js"></SCRIPT>
-
-<!-- Implementation of jQuery UI, first line javascript, second for css  -->
-<!-- <SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-ui-1.7.2.custom.min.js"></SCRIPT> -->
-<SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-ui-1.8.23.custom.min.js"></SCRIPT>
-
-<link rel="stylesheet" type="text/css" href="css/jquery-ui-1.7.2.custom.css" />
-<link rel="stylesheet" type="text/css" href="css/jquery-ui-coge-supplement.css" />
-<link rel="stylesheet" type="text/css" href="css/jquery.ui.autocomplete.css" />
-
-<SCRIPT language="JavaScript" type="text/javascript" src="js/jquery.cookie.js"></SCRIPT>
-<SCRIPT language="JavaScript" type="text/javascript" src="js/superfish.js"></SCRIPT>
-<!-- The following javascript file is an addon for superfish - it is beta, so beware for bugs and updates -->
-<SCRIPT language="JavaScript" type="text/javascript" src="./js/supersubs.js"></SCRIPT>
-<SCRIPT language="JavaScript" type="text/javascript" src="js/hoverIntent.js"></SCRIPT>
-
-</TMPL_UNLESS>
-<link rel="stylesheet" type="text/css" href="css/styled.css" />
+<TMPL_INCLUDE NAME="header_includes.tmpl">
 
 <TMPL_VAR NAME="HEAD">
 
