--- a/web/tmpl/widgets/AddAnnotation.tmpl
+++ b/web/tmpl/widgets/AddAnnotation.tmpl
@@ -231,7 +231,7 @@ function verify_image_file(file) {
       </td>
     </tr>
   </table>
-  <span id='add_annotation_button' onClick="add_annotation();" class='ui-button ui-corner-all ui-button-go'>Add</span>
-  <span id='update_annotation_button' onClick="update_annotation();" style='display:none;' class='ui-button ui-corner-all ui-button-go'>Update</span>
+  <span id='add_annotation_button' onClick="add_annotation();" class='ui-button ui-corner-all'>Add</span>
+  <span id='update_annotation_button' onClick="update_annotation();" style='display:none;' class='ui-button ui-corner-all'>Update</span>
   <img id="wait_annotation" src="picts/ajax-loader.gif" style="opacity: 0;" />
 </div>
