Minor style changes

--- a/web/tmpl/box.tmpl
+++ b/web/tmpl/box.tmpl
@@ -5,10 +5,11 @@
 </TMPL_IF>
 
 <TMPL_IF NAME="BOX_NAME">
-	<h3 class="ui-helper-reset ui-corner-top" aria-expanded="true">
-		<TMPL_VAR NAME="BOX_NAME">
-	</h3>
-	<hr>
+	<div style="padding:10px;padding-bottom:0px;">
+		<h3 class="ui-helper-reset ui-corner-top" aria-expanded="true">
+			<TMPL_VAR NAME="BOX_NAME">
+		</h3>
+	</div>
 </TMPL_IF>
 
 <TMPL_IF NAME="BODY">
