Change annotatin track name

--- a/web/tmpl/widgets/JBrowse.tmpl
+++ b/web/tmpl/widgets/JBrowse.tmpl
@@ -28,7 +28,7 @@
 					baseUrl: 'js/jbrowse/',//dataRoot+'/',
 					include: ['services/JBrowse/service.pl/config/tracks/?gid='+queryParams.gid],
 					//nameUrl: dataRoot + "/names/root.json",
-					defaultTracks: "sequence,genes",
+					defaultTracks: "sequence,features",
 					queryParams: queryParams,
 					location: queryParams.loc || '1:1..150000',//queryParams.loc,
 					forceTracks: queryParams.tracks,
