--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -95,6 +95,7 @@ function get_latest_genomes() {
 			<span style="padding-left:15px;">Nucleotides: <span style="color:darkgreen"><TMPL_VAR NAME="NUCL_COUNT"></span></span>
 			<span style="padding-left:15px;">Genomic Features: <span style="color:darkgreen"><TMPL_VAR NAME="FEAT_COUNT"></span></span>
 			<span style="padding-left:15px;">Annotations: <span style="color:darkgreen"><TMPL_VAR NAME="ANNOT_COUNT"></span></span>
+			<span style="padding-left:15px;">Experiments: <span style="color:darkgreen"><TMPL_VAR NAME="EXP_COUNT"></span></span>
 		</span>
 	</div>
 	
