Fix to remove nuc count

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -92,7 +92,7 @@ function get_latest_genomes() {
 		<span class='small'>
 			<span style="padding-left:15px;">Organisms: <span style="color:darkgreen"><TMPL_VAR NAME="ORG_COUNT"></span></span>
 			<span style="padding-left:15px;">Genomes: <span style="color:darkgreen"><TMPL_VAR NAME="GEN_COUNT"></span></span>
-			<span style="padding-left:15px;">Nucleotides: <span style="color:darkgreen"><TMPL_VAR NAME="NUCL_COUNT"></span></span>
+			<!--<span style="padding-left:15px;">Nucleotides: <span style="color:darkgreen"><TMPL_VAR NAME="NUCL_COUNT"></span></span>-->
 			<span style="padding-left:15px;">Genomic Features: <span style="color:darkgreen"><TMPL_VAR NAME="FEAT_COUNT"></span></span>
 			<span style="padding-left:15px;">Annotations: <span style="color:darkgreen"><TMPL_VAR NAME="ANNOT_COUNT"></span></span>
 			<span style="padding-left:15px;">Experiments: <span style="color:darkgreen"><TMPL_VAR NAME="EXP_COUNT"></span></span>
