--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -91,11 +91,10 @@ function get_latest_genomes() {
 		Welcome to CoGe!
 		<span class='small'>
 			<span style="padding-left:15px;">Organisms: <span style="color:darkgreen"><TMPL_VAR NAME="ORG_COUNT"></span></span>
-			<span style="padding-left:15px;">Genomes: <span style="color:darkgreen"><TMPL_VAR NAME="GEN_COUNT"></span></span>
-			<!--<span style="padding-left:15px;">Nucleotides: <span style="color:darkgreen"><TMPL_VAR NAME="NUCL_COUNT"></span></span>-->
-			<span style="padding-left:15px;">Genomic Features: <span style="color:darkgreen"><TMPL_VAR NAME="FEAT_COUNT"></span></span>
+			<span style="padding-left:15px;">Genomes: <span style="color:darkgreen"><TMPL_VAR NAME="GEN_COUNT"> (<TMPL_VAR NAME="NUCL_COUNT">)</span></span>
+			<span style="padding-left:15px;">Features: <span style="color:darkgreen"><TMPL_VAR NAME="FEAT_COUNT"></span></span>
 			<span style="padding-left:15px;">Annotations: <span style="color:darkgreen"><TMPL_VAR NAME="ANNOT_COUNT"></span></span>
-			<span style="padding-left:15px;">Experiments: <span style="color:darkgreen"><TMPL_VAR NAME="EXP_COUNT"></span></span>
+			<span style="padding-left:15px;">Experiments: <span style="color:darkgreen"><TMPL_VAR NAME="EXP_COUNT"> (<TMPL_VAR NAME="QUANT_COUNT"> values)</span></span>
 		</span>
 	</div>
 	
