--- a/web/tmpl/MotifFind.tmpl
+++ b/web/tmpl/MotifFind.tmpl
@@ -298,6 +298,9 @@ console.log('joinvals2',joinvals2);
 </td>
 	<tr>
 	<Td>
+	</td><td><DIV id="blah"><b>OR</b></DIV></td>
+	<tr>
+	<Td>
    	<DIV id="blah">Enter Sequences (Fasta Format):</DIV></td>
 	<TD><textarea class="backbox" rows="10" cols="20" tabindex="1" name=search_seqs id=search_seqs value="<TMPL_VAR NAME="SEARCH_SEQS">" /></textarea></TD>
 
