Fixed bug where the missing log entry caused ajax calls to continue running.

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -586,6 +586,10 @@ function reset_basename(){
   	results = "Generating images . . . ";
   	pageObj.finished = 1;
   }
+
+  if(log.match(/Completed workflow/i)) {
+    pageObj.finished = 1;
+  }
  }
   
 
